# example_python_package_with_rust_backend

./: Cargo.toml  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: python-publish.yml
examples/: usage.py
src/: lib.rs
tests/: test_python_package.py
