[package]
name = "example_python_package_with_rust_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "example_python_package_with_rust_backend"
crate-type = ["cdylib"]  # allows rust to be compiled to shared lib that python can interact with

[dependencies]
pyo3 = "0.19.0"