[build-system]
requires = ["maturin>=1.3,<2.0", "setuptools_scm[toml]>=7.0.5"]
build-backend = "maturin"

[project]
name = "example_python_package_with_rust_backend"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.maturin]
features = ["pyo3/extension-module"]
